Загрузка данных графика с бэка
