# x6demo-frontend/src/app/api/models/node-loading-timeline-point.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface NodeLoadingTimelinePoint {
+  t: string;
+  v: number;
+}
