# x6demo-frontend/src/app/api/models/node-loading-timeline.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+import { NodeLoadingTimelinePoint } from './node-loading-timeline-point';
+export interface NodeLoadingTimeline {
+  nodeTitle: string;
+  points: Array<NodeLoadingTimelinePoint>;
+  stationTitle: string;
+}
